massage the page layout a bit to avoid fileman autosizer consistently creating a few pixels of outermost scrollbar - exactly contrary to the autosizing intent.
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@3015 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/images/default.css
+++ b/mig/images/default.css
@@ -517,9 +517,14 @@ table th.icon {
   font-family: Small Fonts, VT100, Arial, Helvetica;
   font-size: 8px;
   color: #333;
-  padding: 0 8px;
-  float: right;
+  margin-bottom: 2px;
+  text-align: right;
+  width: 100%;
 }
+#exitcode .spacer {
+  padding: 4px;
+}
+
 #bottomspace {
   padding: 10px;
 }
