--- a/mig/images/skin/erda-ucph-science/core.css
+++ b/mig/images/skin/erda-ucph-science/core.css
@@ -203,7 +203,7 @@ table {
 }
 
 #bottomspace {
-  padding: 0px;
+  padding: 4px;
 }
 #bottomlogo {
   border: 0;
